# synoppy-python

./: .gitignore  LICENSE  README.md  pyproject.toml
synoppy/: __init__.py
